--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-flash-2": "^1.0.1",
     "express-handlebars": "^7.1.0",
-    "pg": "^8.11.1",
+    "express-session": "^1.17.3",
+    "pd": "^0.8.1",
+    "pg": "^8.11.2",
     "pg-promise": "^11.5.2"
   }
 }
